--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,3 +1,6 @@
-h1 {
-    background-color: red;
-}
+@import 'normalized';
+@import 'variables';
+@import 'blogPost';
+@import 'contact';
+@import 'home';
+
