--- a/styles/style.css
+++ b/styles/style.css
@@ -239,16 +239,36 @@ h1 {
   line-height: 92px;
 }
 
-h1 {
+/* General styling */
+.homeH1 {
   font-size: 138px;
   font-family: "PlayfairDisplay", sans-serif;
   font-weight: bold;
   font-style: italic;
   letter-spacing: normal;
   line-height: normal;
+  text-align: center;
+  margin: 0 auto;
+  padding-bottom: 30px;
+  z-index: 5;
 }
 
-.container {
+img {
+  width: 100%;
+  max-width: 100%;
+}
+
+header {
+  background-image: url("../assets/header-image.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 600px;
+  position: relative;
+}
+
+.navContainer {
   margin: 0;
   width: 100%;
   display: -webkit-box;
@@ -259,6 +279,34 @@ h1 {
           justify-content: flex-end;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+}
+
+.capturedSection {
+  background-color: #EFFDF3;
+  height: 90vh;
+}
+
+.textContainer {
+  margin: 0 auto;
+  width: 60%;
+  height: 100%;
+  padding-bottom: 120px;
+}
+
+.container2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 ul {
@@ -273,4 +321,59 @@ ul li a {
 
 li:last-child {
   padding-right: 100px;
+}
+
+.container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.imgContainerabs {
+  position: absolute;
+  bottom: -40%;
+  right: 0;
+  width: calc(50% - 80px);
+  border: 50px solid #FDFA69;
+  border-right: 0;
+  z-index: 4;
+}
+
+.container3 {
+  margin: 0;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.container3 * {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+.container3 img {
+  width: 60%;
+  -webkit-box-shadow: 30px 25px #FDFA69;
+          box-shadow: 30px 25px #FDFA69;
+  -webkit-transform: translateY(-25px);
+          transform: translateY(-25px);
+}
+
+.reverse {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
 }
