--- a/styles/sass/_home.scss
+++ b/styles/sass/_home.scss
@@ -6,12 +6,36 @@
     padding-bottom: 30px;
     z-index: 5;
 }
+h2 {
+    @include basicFont(42px, 1px);
+}
+h3 {
+    @include basicFont(32px, 1px);
+    margin: 0;
+}
+p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    line-height: 32px;
+}
+
+button {
+    @include basicFont(20px, 1px, 32px);
+    text-align: center;
+    background-color: #4ceea7;
+    border: none;
+}
+
+a {
+    @include basicFont (20px, 1px , 29px );
+    color: black;
+}
 img {
     width: 100%;
     max-width: 100%;
 }
 
-header {
+.homeHeader {
     background-image: url('../assets/header-image.jpg');
     background-size: cover;
     background-position: center;
@@ -33,22 +57,23 @@ header {
 .capturedSection {
     // background-color: rgb( 76, 238, 167);
     background-color: #EFFDF3;
-    height: 90vh;
+    
+    .textContainer {
+        margin: 0 auto;
+        width:60%;
+        height: 100%;
+        padding-bottom : 200px;
+        padding-top: 280px;
+    }
+    
+    .container2 {
+        display:flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: center;
+    }
 }
 
-.textContainer {
-    margin: 0 auto;
-    width:60%;
-    height: 100%;
-    padding-bottom: 120px;
-}
-
-.container2 {
-    display:flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-}
 
 ul {
     list-style: none;
@@ -57,6 +82,17 @@ ul {
     
         a {
             text-decoration: none;
+            position: relative;
+        }
+        .underline::before {
+            content: '';
+            width: 105%;
+            height: 2px;
+            background-color:#4ceea7;
+            z-index: 55;
+            position:absolute;
+            bottom: -5px;
+            left: -4px;
         }
     }
 }
@@ -86,21 +122,143 @@ li:last-child{
     margin: 0;
     width: 100%;
     display: flex;
-    justify-content : center;
+    justify-content : space-between;
     flex-wrap : wrap;
-    * {
-        flex:1;
+    >* {
+        width: 42%;
+        
+        margin: 0;
     }
-    img {
-        width: 60%;
-        box-shadow: 30px 25px #FDFA69;
-        transform: translateY(-25px);
+    .imgContainer {
+        img {
+            width: 100%;
+            
+        }
+        .imgLeft {
+            box-shadow: 30px 25px #FDFA69;
+            transform: translateY(-25px);
+        }
+        .imgRight {
+            box-shadow: -30px 25px #FDFA69;
+            transform: translateY(25px);
+        }
+    }
+    .textContainer2, .textContainer3 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        
+
+        p {
+            width: 76.2%;
+        }
+
+        
+    }
+    .textContainer2{
+        align-items: flex-end;
+    }
+    .textContainer3 {
+        align-items: flex-start;
     }
 }
 
 .reverse {
     flex-direction: row-reverse;
+    
 }
 
 
+//Icon section
+.iconSection {
+    background-color: #EFFDF3;
+    
+}
+.container4 {
+    height:100%;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    padding: 75px 0;
 
+    >*{
+        flex: 50%;
+    }
+}
+
+.container6 {
+    display: flex;
+    i {
+        font-size: 30px;
+        padding-top : 6px;
+        padding-left: 11px;
+        // padding-right: 15px;
+        border: 1px solid #4ceea7;
+        background-color: #4ceea7;
+        border-radius: 50%;
+        height: 50px;
+        width: 50px;
+    }
+
+
+}
+
+//@at-root
+.profileSection{
+    background-color: #EFFDF3;
+    .container5{
+            width: 80%;
+            height: 100%;
+            margin: 0 auto;
+            
+            display:flex;
+            justify-content: center;
+            .imgContainer {
+                width:25%;
+
+                img {
+                    box-shadow: 15px 15px #FDFA69;
+                    
+                }
+            }
+            >* {
+               padding: 30px 0;
+               h2 {
+                margin: 0;
+                   
+               }
+            }
+
+            .textContainer {
+                padding-left: 80px;
+                width: 75%;
+            }
+        }
+}
+
+.gallerySection {
+    background-color: #FAFAFA;
+    .grid {
+        width:80%;
+        height: 100%;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 40px;
+        padding: 40px 0;
+    }
+}
+
+
+footer {
+    background-color: #2c2c2c;
+    text-align: center;
+    p {
+        margin: 0;
+        padding: 5px 0;
+        color: white;
+    }
+}
