--- a/styles/style.css
+++ b/styles/style.css
@@ -230,19 +230,10 @@ template {
   overflow: hidden;
 }
 
-h1 {
-  font-size: 80px;
-  font-family: "PlayfairDisplay", sans-serif;
-  font-weight: bold;
-  font-style: italic;
-  letter-spacing: normal;
-  line-height: 92px;
-}
-
 /* General styling */
 .homeH1 {
   font-size: 138px;
-  font-family: "PlayfairDisplay", sans-serif;
+  font-family: "Playfair Display", sans-serif;
   font-weight: bold;
   font-style: italic;
   letter-spacing: normal;
@@ -253,12 +244,59 @@ h1 {
   z-index: 5;
 }
 
+h2 {
+  font-size: 42px;
+  font-family: "Playfair Display", sans-serif;
+  font-weight: bold;
+  font-style: italic;
+  letter-spacing: 1px;
+  line-height: normal;
+}
+
+h3 {
+  font-size: 32px;
+  font-family: "Playfair Display", sans-serif;
+  font-weight: bold;
+  font-style: italic;
+  letter-spacing: 1px;
+  line-height: normal;
+  margin: 0;
+}
+
+p {
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  line-height: 32px;
+}
+
+button {
+  font-size: 20px;
+  font-family: "Playfair Display", sans-serif;
+  font-weight: bold;
+  font-style: italic;
+  letter-spacing: 1px;
+  line-height: 32px;
+  text-align: center;
+  background-color: #4ceea7;
+  border: none;
+}
+
+a {
+  font-size: 20px;
+  font-family: "Playfair Display", sans-serif;
+  font-weight: bold;
+  font-style: italic;
+  letter-spacing: 1px;
+  line-height: 29px;
+  color: black;
+}
+
 img {
   width: 100%;
   max-width: 100%;
 }
 
-header {
+.homeHeader {
   background-image: url("../assets/header-image.jpg");
   background-size: cover;
   background-position: center;
@@ -283,17 +321,15 @@ header {
 
 .capturedSection {
   background-color: #EFFDF3;
-  height: 90vh;
 }
-
-.textContainer {
+.capturedSection .textContainer {
   margin: 0 auto;
   width: 60%;
   height: 100%;
-  padding-bottom: 120px;
+  padding-bottom: 200px;
+  padding-top: 280px;
 }
-
-.container2 {
+.capturedSection .container2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -317,6 +353,17 @@ ul li {
 }
 ul li a {
   text-decoration: none;
+  position: relative;
+}
+ul li .underline::before {
+  content: "";
+  width: 105%;
+  height: 2px;
+  background-color: #4ceea7;
+  z-index: 55;
+  position: absolute;
+  bottom: -5px;
+  left: -4px;
 }
 
 li:last-child {
@@ -352,23 +399,55 @@ li:last-child {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
-.container3 * {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+.container3 > * {
+  width: 42%;
+  margin: 0;
 }
-.container3 img {
-  width: 60%;
+.container3 .imgContainer img {
+  width: 100%;
+}
+.container3 .imgContainer .imgLeft {
   -webkit-box-shadow: 30px 25px #FDFA69;
           box-shadow: 30px 25px #FDFA69;
   -webkit-transform: translateY(-25px);
           transform: translateY(-25px);
+}
+.container3 .imgContainer .imgRight {
+  -webkit-box-shadow: -30px 25px #FDFA69;
+          box-shadow: -30px 25px #FDFA69;
+  -webkit-transform: translateY(25px);
+          transform: translateY(25px);
+}
+.container3 .textContainer2, .container3 .textContainer3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.container3 .textContainer2 p, .container3 .textContainer3 p {
+  width: 76.2%;
+}
+.container3 .textContainer2 {
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+.container3 .textContainer3 {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .reverse {
@@ -376,4 +455,360 @@ li:last-child {
   -webkit-box-direction: reverse;
       -ms-flex-direction: row-reverse;
           flex-direction: row-reverse;
+}
+
+.iconSection {
+  background-color: #EFFDF3;
+}
+
+.container4 {
+  height: 100%;
+  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0 auto;
+  padding: 75px 0;
+}
+.container4 > * {
+  -webkit-box-flex: 50%;
+      -ms-flex: 50%;
+          flex: 50%;
+}
+
+.container6 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.container6 i {
+  font-size: 30px;
+  padding-top: 6px;
+  padding-left: 11px;
+  border: 1px solid #4ceea7;
+  background-color: #4ceea7;
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+}
+
+.profileSection {
+  background-color: #EFFDF3;
+}
+.profileSection .container5 {
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.profileSection .container5 .imgContainer {
+  width: 25%;
+}
+.profileSection .container5 .imgContainer img {
+  -webkit-box-shadow: 15px 15px #FDFA69;
+          box-shadow: 15px 15px #FDFA69;
+}
+.profileSection .container5 > * {
+  padding: 30px 0;
+}
+.profileSection .container5 > * h2 {
+  margin: 0;
+}
+.profileSection .container5 .textContainer {
+  padding-left: 80px;
+  width: 75%;
+}
+
+.gallerySection {
+  background-color: #FAFAFA;
+}
+.gallerySection .grid {
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 40px;
+  padding: 40px 0;
+}
+
+footer {
+  background-color: #2c2c2c;
+  text-align: center;
+}
+footer p {
+  margin: 0;
+  padding: 5px 0;
+  color: white;
+}
+
+h4 {
+  font-size: 26px;
+  font-family: "Playfair Display", sans-serif;
+  font-weight: bold;
+  font-style: italic;
+  letter-spacing: 1.1px;
+  line-height: normal;
+}
+
+.contactHeader {
+  background-image: url("../assets/contact-header.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 600px;
+  position: relative;
+}
+.contactHeader h1 {
+  font-size: 82px;
+  font-family: "Playfair Display", sans-serif;
+  font-weight: bold;
+  font-style: italic;
+  letter-spacing: normal;
+  line-height: 92px;
+  text-align: center;
+  padding-top: 150px;
+  padding-left: 100px;
+}
+
+.formBox {
+  width: 60%;
+  position: absolute;
+  right: 50px;
+  bottom: -220px;
+  -webkit-box-shadow: -30px 25px #FDFA69;
+          box-shadow: -30px 25px #FDFA69;
+  height: 60vh;
+  padding: 40px;
+  background-color: white;
+}
+
+form.container {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+form.container .formContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+form.container .formContainer > * {
+  width: 48%;
+  border: none;
+  border-bottom: 2px solid #4ceea7;
+}
+form.container textarea {
+  border: 2px solid #4ceea7;
+  height: 70%;
+  margin: 10px 0;
+}
+
+.contactInfo {
+  background-color: #effdf3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  height: 50vh;
+}
+.contactInfo > * {
+  width: 30%;
+  padding-left: 10%;
+  margin: 0;
+}
+.contactInfo > *:first-child {
+  padding-top: 80px;
+}
+.contactInfo > *:last-child {
+  padding-bottom: 80px;
+}
+.contactInfo i {
+  font-size: 20px;
+  padding-right: 20px;
+}
+
+.blogHeader {
+  background-image: url("../assets/blog-header.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 600px;
+  position: relative;
+}
+.blogHeader h1 {
+  font-size: 80px;
+  font-family: "Playfair Display", sans-serif;
+  font-weight: bold;
+  font-style: italic;
+  letter-spacing: normal;
+  line-height: 92px;
+  text-align: center;
+  margin: 0;
+}
+
+.imgContainerBlogAbs {
+  position: absolute;
+  bottom: -40%;
+  right: 0;
+  width: 60%;
+  -webkit-box-shadow: -30px 25px #FDFA69;
+          box-shadow: -30px 25px #FDFA69;
+  border-right: 0;
+  z-index: 4;
+}
+
+.blogSection {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: #Effdf3;
+}
+.blogSection .blogText {
+  max-width: calc(60% + 30px);
+  min-width: calc(60% + 30px);
+  border-left: 4px solid #FDFA69;
+  padding-top: 300px;
+  position: relative;
+}
+.blogSection .blogText > * {
+  width: 80%;
+  margin: 0 30px;
+}
+.blogSection .blogText p {
+  padding-bottom: 20px;
+}
+.blogSection .blogText::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 4px;
+  width: calc(80% + 30px);
+  border-bottom: 4px solid #FDFA69;
+}
+.blogSection .sideColumn {
+  width: 30%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+.blogSection .sideColumn .imgContainer {
+  width: 100%;
+  -webkit-box-shadow: 35px 17px 0px -18px #FAFAFA;
+          box-shadow: 35px 17px 0px -18px #FAFAFA;
+}
+.blogSection .sideColumn .textContainerSide {
+  background-color: #FAFAFA;
+  width: 80%;
+  -webkit-transform: translateX(17px);
+          transform: translateX(17px);
+}
+.blogSection .sideColumn .textContainerSide li {
+  list-style: initial;
+  padding: 0;
+  color: #4ceea7;
+}
+.blogSection .sideColumn .textContainerSide span {
+  color: black;
+}
+
+.commentSection {
+  background-color: #Effdf3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+.commentSection > * {
+  width: 60%;
+}
+.commentSection .commentContainer {
+  padding-bottom: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.commentSection .commentContainer .imgContainer {
+  -webkit-box-flex: 10%;
+      -ms-flex: 10%;
+          flex: 10%;
+}
+.commentSection .commentContainer .imgContainer img {
+  padding-top: 8px;
+}
+.commentSection .commentContainer .textContainer {
+  -webkit-box-flex: 90%;
+      -ms-flex: 90%;
+          flex: 90%;
+}
+.commentSection .commentContainer .textContainer p {
+  margin: 0;
+  padding-left: 20px;
+  width: 80%;
+}
+.commentSection .formBoxBlog {
+  height: 60vh;
+}
+.commentSection .formBoxBlog form.container {
+  width: 80%;
+  padding-bottom: 20px;
+}
+.commentSection .formBoxBlog form.container input, .commentSection .formBoxBlog form.container textarea {
+  padding: 10px 0 10px 10px;
+  background-color: #Effdf3;
 }
