Finished some more SASS styling and did the media queries for the home page

--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -8,4 +8,15 @@
 }
 
 
+@mixin headerImage ($backgroundUrl) {
+    background-image: $backgroundUrl;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 600px;
+    position: relative
+}
+
+
 
