--- a/styles/sass/_blogPost.scss
+++ b/styles/sass/_blogPost.scss
@@ -3,13 +3,8 @@
 
 
 .blogHeader {
-    background-image: url('../assets/blog-header.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 600px;
-    position: relative;
+    @include headerImage(url('../assets/blog-header.jpg'));
+    
 
     h1 {
         @include basicFont (80px, normal, 92px );
@@ -90,6 +85,10 @@
 
             span {
                 color: black;
+            }
+
+            span.bold {
+                font-weight: bold;
             }
         }
     }
