--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -3,14 +3,8 @@ h4 {
 }
 
 .contactHeader {
-    background-image: url('../assets/contact-header.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 600px;
-    position: relative;
-
+    @include headerImage (url('../assets/contact-header.jpg'));
+    
     h1 {
         @include basicFont(82px, normal, 92px);
         text-align: center;
@@ -22,9 +16,9 @@ h4 {
     width: 60%;
     position: absolute;
     right: 50px;
-    bottom: -220px;
+    bottom: -300px;
     box-shadow: -30px 25px #FDFA69;
-    height: 60vh;
+    height: 70vh;
     padding: 40px;
     background-color: white;
 
@@ -52,7 +46,7 @@ form.container {
 
     textarea {
         border: 2px solid #4ceea7;
-        height: 70%;
+        height: 60%;
         margin: 10px 0;
     }
     
@@ -63,10 +57,9 @@ form.container {
     background-color: #effdf3;
     display:flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: flex-start;
-    // width: 30%;
-    height: 50vh;
+    height: 70vh;
     >* {
         width: 30%;
         padding-left: 10%;
@@ -83,9 +76,13 @@ form.container {
     }
 
     i {
-        font-size: 20px;
+        font-size: 22px;
         padding-right: 20px;
 
+    }
+    h4 {
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
 
 }
