--- a/styles/sass/_home.scss
+++ b/styles/sass/_home.scss
@@ -3,7 +3,7 @@
     @include basicFont(138px);
     text-align: center;
     margin: 0 auto;
-    padding-bottom: 30px;
+    padding-bottom: 25px;
     z-index: 5;
 }
 h2 {
@@ -13,7 +13,7 @@ h3 {
     @include basicFont(32px, 1px);
     margin: 0;
 }
-p {
+p, li {
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
     line-height: 32px;
@@ -22,6 +22,7 @@ p {
 button {
     @include basicFont(20px, 1px, 32px);
     text-align: center;
+    padding: 0 10px;
     background-color: #4ceea7;
     border: none;
 }
@@ -34,15 +35,16 @@ img {
     width: 100%;
     max-width: 100%;
 }
+// Header Section
 
 .homeHeader {
-    background-image: url('../assets/header-image.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 600px;
-    position: relative;
+    @include headerImage(url('../assets/header-image.jpg'));       
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .navContainer {
@@ -53,27 +55,6 @@ img {
     flex-wrap : wrap;
     
 }
-
-.capturedSection {
-    // background-color: rgb( 76, 238, 167);
-    background-color: #EFFDF3;
-    
-    .textContainer {
-        margin: 0 auto;
-        width:60%;
-        height: 100%;
-        padding-bottom : 200px;
-        padding-top: 280px;
-    }
-    
-    .container2 {
-        display:flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        align-items: center;
-    }
-}
-
 
 ul {
     list-style: none;
@@ -95,18 +76,12 @@ ul {
             left: -4px;
         }
     }
-}
 
-li:last-child{
-    padding-right: 100px;
-}
+    li:last-child{
+        padding-right: 100px;
+    }  
 
-.container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
 }
-
 
 .imgContainerabs {
     position: absolute;
@@ -118,6 +93,29 @@ li:last-child{
     z-index: 4;
 }
 
+// Capture Section
+.capturedSection {
+    
+    background-color: #EFFDF3;
+    
+    .textContainer {
+        margin: 0 auto;
+        width:60%;
+        height: 100%;
+        padding-bottom : 200px;
+        padding-top: 280px;
+    }
+    
+    .container2 {
+        display:flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: center;
+    }
+}
+
+
+// 3rd and 4th section
 .container3 {
     margin: 0;
     width: 100%;
@@ -125,8 +123,7 @@ li:last-child{
     justify-content : space-between;
     flex-wrap : wrap;
     >* {
-        width: 42%;
-        
+        width: 42%;  
         margin: 0;
     }
     .imgContainer {
@@ -195,18 +192,39 @@ li:last-child{
         font-size: 30px;
         padding-top : 6px;
         padding-left: 11px;
-        // padding-right: 15px;
         border: 1px solid #4ceea7;
         background-color: #4ceea7;
         border-radius: 50%;
         height: 50px;
         width: 50px;
     }
+    
+    .icon1 {
+       padding-top:7px;
+       padding-left: 9px; 
+    }
 
+    .icon2 {
+        padding-top: 7px;
+        padding-left: 6px;
 
+    }
+
+    .icon3 {
+        padding-top: 7px;
+        padding-left: 14px;
+    }
+    .icon4 {
+        padding-top: 9px;
+        padding-left: 9px;
+    }
+
+    .iconContainer {
+        margin-right: 20px;
+    }
 }
 
-//@at-root
+//profile section
 .profileSection{
     background-color: #EFFDF3;
     .container5{
@@ -216,6 +234,7 @@ li:last-child{
             
             display:flex;
             justify-content: center;
+            flex-wrap: wrap;
             .imgContainer {
                 width:25%;
 
@@ -238,7 +257,7 @@ li:last-child{
             }
         }
 }
-
+// Gallery Section
 .gallerySection {
     background-color: #FAFAFA;
     .grid {
@@ -261,4 +280,126 @@ footer {
         padding: 5px 0;
         color: white;
     }
+}
+
+// media queries
+
+@media (max-width: 850px) {
+    .container3 {
+        .textContainer3, .textContainer2{
+            justify-content: center;
+            align-items: center;
+        }
+        
+        >* {
+            flex: 100%;
+            
+        }
+
+        .textContainer2>h3 {
+            padding-top: 50px;
+        }
+
+        button {
+            margin-bottom: 10px;
+        }
+    }
+
+}
+
+
+
+@media (max-width: 730px) {
+    .container4>* {
+        flex: 100%;
+    }
+
+    .capturedSection > .textContainer {
+        width: 80%;
+    }
+    .profileSection{
+        .container5 {
+            justify-content: center;
+            >*{
+                flex: 100%;
+            }
+
+            .textContainer {
+                display:flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                padding-left: 0;
+            }
+
+            .imgContainer{
+                max-width: 60%;
+            }
+            
+        }
+    }
+    .image3{
+        display: none;
+    }
+    .gallerySection > .grid {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .homeH1 {
+        font-size: 100px;
+    }
+}
+
+
+
+@media (max-width: 550px) {
+    .homeH1 {
+        font-size: 80px;
+    }
+    .imgContainerabs {
+        display: none;
+    }
+
+    h2 {
+        font-size: 30px;
+    }
+    .capturedSection>.container2 {
+        padding-top: 20px;
+    }
+
+    p , button {
+        font-size: 16px;
+    }
+
+    nav {
+        visibility: hidden; // is this still seen by screen reader????
+    }
+
+    .homeHeader {
+        background-position-x : 0px;
+    }
+}
+
+@media (max-width : 440px) {
+    .homeH1 {
+        font-size: 60px;
+    }
+
+
+    h3 {
+        font-size: 25px;
+    }
+
+    p , button {
+        font-size: 12px;
+    }
+}
+
+
+@media (max-width: 396px) {
+
+    h2 {
+            font-size: 25px;
+    }
+    
 }
