--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -2,6 +2,8 @@ h4 {
     @include basicFont(26px, 1.1px);
 }
 
+
+//header
 .contactHeader {
     @include headerImage (url('../assets/contact-header.jpg'));
     
@@ -10,6 +12,7 @@ h4 {
         text-align: center;
         padding-top: 150px;
         padding-left: 100px;
+        margin: 0;
     }
 }
 .formBox {
@@ -20,7 +23,7 @@ h4 {
     box-shadow: -30px 25px #FDFA69;
     height: 70vh;
     padding: 40px;
-    background-color: white;
+    background-color: #fafafa;
 
 }
 form.container {
@@ -83,6 +86,59 @@ form.container {
     h4 {
         padding-top: 20px;
         padding-bottom: 20px;
+    }
+
+}
+
+
+@media (max-width: 1170px) {
+   h4 {
+       font-size: 20px;
+   }
+   
+   
+}
+
+
+@media (max-width: 958px ) {
+    .formBox {
+         right: 20%;
+    }
+
+    .contactInfo {
+        padding-top :300px;
+        height: 90vh;
+        align-items: center;
+
+         >* {
+             width: 50%;
+         }
+    }
+}
+
+
+@media (max-width: 815px) {
+    .contactHeader{
+        background-position-X: 0px;
+        
+    }
+    
+    .formBox {
+        width: 80%;
+        right: 8%;
+    }
+
+    .contactInfo > *{
+        width: 70%;
+    }
+
+
+}
+
+@media (max-width: 746px) {
+    .contactHeader > h1 {
+        font-size: 70px;
+        padding-left: 0;
     }
 
 }
