more editing of scss

--- a/styles/sass/_home.scss
+++ b/styles/sass/_home.scss
@@ -222,7 +222,7 @@ input:checked ~ .menuContent {
     }
 }
 
-.container6 {
+.containerFlexIcon {
     display: flex;
     i {
         font-size: 30px;
